# ersap-coda

./: README.md  build.gradle  ersap-coda.yaml
src/main/cpp/: CMakeList.txt  CMakeLists.txt
src/main/cpp/include/: CodaTimeFrameBinaryDataType.hpp  CodaTimeFrameDataType.hpp  SROPrinterService.hpp  SROTestDataType.hpp
src/main/cpp/src/: CodaTimeFrameBinaryDataType.cpp  CodaTimeFrameBinaryPrinterActor.cpp  CodaTimeFrameDataType.cpp  CodaTimeFramePrinterActor.cpp  SROPrinterService.cpp  SROTestDataType.cpp  SROtestDataType.cpp
src/main/java/org/jlab/ersap/actor/coda/: README.md  service_et.yaml  service_socket.yaml  services.yaml
src/main/java/org/jlab/ersap/actor/coda/engine/: CodaEtSourceEngine.java  EventIdentificationEngine.java
src/main/java/org/jlab/ersap/actor/coda/engine/binary/: CodaHitFinderBinaryEngine.java  CodaSinkBinaryEngine.java  CodaSinkFileEngine.java  MultiChannelDigitizerDisplayBinary.java
src/main/java/org/jlab/ersap/actor/coda/engine/jobj/: CodaHitFinderEngine.java  CodaSinkEngine.java  MultiChannelDigitizerDisplay.java
src/main/java/org/jlab/ersap/actor/coda/proc/: EtEvent.java  EvioEventParser.java  FADCHit.java  RocTimeFrameBank.java
src/main/java/org/jlab/ersap/actor/coda/source/et/: CodaETReader.java  CodaRemoteETReader.java
src/main/java/org/jlab/ersap/actor/datatypes/: CodaTimeFrameBinaryDataType.java  SROTestDataType.java
src/main/java/org/jlab/ersap/coda/engines/: AggFileReaderEngine.java  AggHistogramEngine.java  AggStoreHistogramEngine.java  FAdcCosmicIdEngine.java  FAdcEvtIdentifyEngine.java  FAdcHitsEngine.java  FAdcIdEngine.java  FAdcSlidingWindowIdEngine.java  ManualHistogramEngine.java
src/main/java/org/jlab/ersap/coda/support/: AggFileOutputReader.java  LiveHistogram.java  ManualHistogram.java  VAdcHit.java
src/main/java/org/jlab/ersap/coda/types/: EvioDataType.java  JavaObjectType.java
src/main/java/org/jlab/ersap/coda/util/: O2BB2O.java
src/main/resources/org/jlab/ersap/actor/coda/engine/binary/: CodaSinkBinaryEngine.yaml  CodaSinkFileEngine.yaml
src/main/resources/org/jlab/ersap/actor/coda/engine/jobj/: CodaSinkEngine.yaml
src/main/resources/org/jlab/ersap/coda/engines/: AggFileReaderEngine.yaml  AggHistogramEngine.yaml  AggStoreHistogramEngine.yaml  ManualHistogramEngine.yaml
